# mnemosyne

./: .gitignore  README.md  default.nix  mnemosyne.cabal  quote-db.cabal  sample.csv  shell.nix
.github/workflows/: haskell.yml
app/: Main.hs
src/: Mnemosyne.hs  QuoteDb.hs
src/Mnemosyne/: Csv.hs  Html.hs  LaTeX.hs  Plain.hs  Type.hs  Util.hs
src/QuoteDb/: Csv.hs  Html.hs  LaTeX.hs  Plain.hs  Pretty.hs  Type.hs  Util.hs
