name:                mnemosyne
version:             0.2.0
synopsis:            A tool for managing a database of literature quotes
homepage:            https://github.com/kmein/mnemosyne#readme
license:             MIT
license-file:        LICENSE
author:              Kierán Meinhardt
maintainer:          kieran.meinhardt@gmail.com
copyright:           Copyright (c) 2017 Kierán Meinhardt
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mnemosyne
                     , Mnemosyne.Csv
                     , Mnemosyne.Html
                     , Mnemosyne.LaTeX
                     , Mnemosyne.Plain
                     , Mnemosyne.Type
                     , Mnemosyne.Util
  ghc-options:         -Wall -Werror -Wunused-imports
  build-depends:       base >= 4.7 && < 5
                     , HaTeX
                     , bytestring
                     , cassava
                     , hasmin
                     , lucid
                     , megaparsec
                     , prettyprinter
                     , raw-strings-qq
                     , text
  default-language:    Haskell2010

executable mnemosyne
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -Wunused-imports
  build-depends:       base
                     , mnemosyne
                     , optparse-applicative
                     , text
  default-language:    Haskell2010

test-suite mnemosyne-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mnemosyne
  ghc-options:         -Wall -Werror -Wunused-imports
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kmein/mnemosyne
